--- a/style/style.css
+++ b/style/style.css
@@ -982,7 +982,7 @@ select#countryCode option {
     .section5-checkbox div {
         margin-bottom: 5px;
     }
-    .section {
+    .section5 {
         padding-bottom: 25px;
     }
     input,
