--- a/style/var.css
+++ b/style/var.css
@@ -17,6 +17,7 @@
     --black: #303030;
     --white: #fff;
     --grey: #f3f3f3;
+    --ss-font: 16px;
     --s-font: 20px;
     --sm-font: 24px;
     --m-font: 30px;
