--- a/style/style.css
+++ b/style/style.css
@@ -595,6 +595,7 @@ body.no-scroll {
     color: var(--white);
     padding: 22px 22px;
     margin-bottom: 30px;
+    gap: 6px;
 }
 
 .phone-number a {
@@ -625,6 +626,10 @@ body.no-scroll {
 }
 /* input[type='checkbox' i] {
 } */
+
+#contact-form textarea {
+    resize: none;
+}
 
 .phone-input {
     display: flex;
@@ -730,14 +735,22 @@ select#countryCode {
 .footer-contacts a {
     color: var(--white);
     font-family: 'Lato', sans-serif;
-    font-size: var(--s-font);
+    font-size: var(--ss-font);
 }
 
 .footer-contacts p {
     color: var(--white);
-    font-size: var(--s-font);
+    font-size: var(--ss-font);
     font-family: 'Lato', sans-serif;
     font-weight: 600;
+}
+
+.footer-copyright {
+    padding-top: 30px;
+    text-align: center;
+    color: var(--white);
+    font-size: var(--ss-font);
+    font-family: 'Lato', sans-serif;
 }
 
 /* =============================== ADAPTATION ================================== */
@@ -746,6 +759,7 @@ select#countryCode {
 
 @media (max-width: 1100px) {
     :root {
+        --ss-font: 14px;
         --s-font: 16px;
         --sm-font: 20px;
         --m-font: 26px;
@@ -761,6 +775,7 @@ select#countryCode {
 
 @media (max-width: 950px) {
     :root {
+        --ss-font: 12px;
         --s-font: 14px;
         --sm-font: 18px;
         --m-font: 22px;
