--- a/style/style.css
+++ b/style/style.css
@@ -59,7 +59,7 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 }
-.preloader {
+/* .preloader {
     top: 0;
     left: 0;
     width: 100%;
@@ -77,7 +77,7 @@ body {
     border-top: 6px solid var(--green);
     border-radius: 50%;
     animation: 1s linear infinite spin;
-}
+} */
 .glide__slide img,
 .header {
     border-bottom: 5px solid var(--green);
