--- a/style/var.css
+++ b/style/var.css
@@ -14,7 +14,11 @@
 
 :root {
     --green: #00c925;
-    --black_green: #02ad21;
+    --black_green: #c1ff00;
+
+    /* --green: #d1fa94;
+    --black_green: #00c925; */
+
     --black: #303030;
     --white: #fff;
     --grey: #f3f3f3;
