add sale on books

--- a/style/style_for_books.css
+++ b/style/style_for_books.css
@@ -193,3 +193,15 @@
 .section2-text a {
     color: var(--green);
 }
+@media (max-width: 770px) {
+    .timer {
+        right: -43px;
+        top: -27px;
+    }
+}
+@media (max-width: 610px) {
+    .timer {
+        right: 0px;
+        top: -147px;
+    }
+}
